--- a/src/app/crocodile-game/crocodile-game.component.html
+++ b/src/app/crocodile-game/crocodile-game.component.html
@@ -1,3 +1,7 @@
-<app-game-hp></app-game-hp>
-<app-game-word></app-game-word>
-<app-game-choice></app-game-choice>
+<div class="container">
+  <app-game-hp></app-game-hp>
+  <div class="scrollable-container">
+    <app-game-word></app-game-word>
+  </div>
+  <app-game-choice></app-game-choice>
+</div>
