--- a/src/app/crocodile-game/crocodile-game.component.html
+++ b/src/app/crocodile-game/crocodile-game.component.html
@@ -1,21 +1,23 @@
 <div class="container" #container>
-  <div class="hp-container mt-3" [hidden]="!isHidden">
-    <div class="hp-img">
-      <img src="/assets/images/crocodile-game/hp-{{ hp }}.png">
-    </div>
+  <!-- show description image if not in gaming stage  -->
+  <div *ngIf="currentStage != pageStages.gaming" (click)="changeStage()" class="stage-desc">
+    <img [src]="stageImgMap[currentStage].img" class="cow-image" alt="Cow">
   </div>
-  <div class="main">
-    <div class="crocodile">
-      <img src="/assets/images/crocodile-game/crocodile.png">
-    </div>
-    <ng-container *ngFor="let message of viewMsgs; let i=index;">
-      <div class="bubble" [ngClass]="'bubble' + (i+1)" (click)="bubbleClick(i)">
-        <div>{{ message.text }}</div>
-        <img src="/assets/images/crocodile-game/bubble{{i+1}}.png">
+  <div *ngIf="currentStage == pageStages.gaming">
+    <div class="hp-container mt-3">
+      <div class="hp-img">
+        <img src="/assets/images/crocodile-game/hp-{{ hp }}.png">
       </div>
-    </ng-container>
-    <div class="desc" [hidden]="isHidden">
-      <img src="/assets/images/crocodile-game/desc_bg.png">
+    </div>
+    <div class="main">
+      <div class="crocodile">
+        <img src="/assets/images/crocodile-game/crocodile.png">
+      </div>
+      <ng-container *ngFor="let message of viewMsgs; let i=index;">
+        <div class="bubble" [ngClass]="'bubble' + (i+1)" (click)="bubbleClick(i)">
+          <img src="{{message.imgPath}}">
+        </div>
+      </ng-container>
     </div>
   </div>
 </div>
