--- a/src/app/rabbit-game/rabbit-game.component.scss
+++ b/src/app/rabbit-game/rabbit-game.component.scss
@@ -134,11 +134,13 @@
     }
 
     .OK {
-      width: 6%;
+      width: 10%;
     }
   }
+
+  .stage-desc {
+    width: 75%;
+    position: relative;
+    margin: auto;
+  }
 }
-
-
-
-
