--- a/src/app/crocodile-game/crocodile-game.component.scss
+++ b/src/app/crocodile-game/crocodile-game.component.scss
@@ -22,148 +22,85 @@ img {
   object-fit: cover;
 }
 
+.main {
+  position: relative;
+
+  .crocodile {
+    position: absolute;
+    top: 55%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 15%;
+  }
+
+  .bubble1{
+    top: 20%;
+    left: 10%;
+  }
+
+  .bubble2 {
+    top: 45%;
+    left: 10%;
+  }
+
+  .bubble3 {
+    top: 70%;
+    left: 10%;
+  }
+
+  .bubble4 {
+    top: 20%;
+    right: 10%;
+  }
+
+  .bubble5 {
+    top: 45%;
+    right: 10%;
+  }
+
+  .bubble6 {
+    top: 70%;
+    right: 10%;
+  }
+
+  .bubble {
+    position: absolute;
+    width: 30%;
+  }
+}
+
+.hp-container {
+  position: relative;
+  margin: auto;
+
+  .hp-img {
+    position: absolute;
+    z-index: 2;
+  }
+}
+
 
 // 直
 @media (orientation: portrait) {
   .hp-container {
-    position: relative;
-    width: 90%;
-
-    .hp-img {
-      position: absolute;
-      z-index: 2;
-    }
+    width: 80%;
   }
 
   .main {
-    position: relative;
-    height: 55dvh;
-    width: 90%;
-
-    .crocodile {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 25%;
-    }
-
-    .bubble1{
-      position: absolute;
-      top: 30%;
-      right: -10px;
-      width: 40%;
-    }
-
-    .bubble2 {
-      position: absolute;
-      bottom: 30%;
-      right: -10px;
-      width: 40%;
-    }
-
-    .bubble3 {
-      position: absolute;
-      top: 30%;
-      left: -15px;
-      width: 40%;
-    }
-
-    .bubble4 {
-      position: absolute;
-      bottom: 30%;
-      left: 10px;
-      width: 40%;
-    }
-
-    .fixed {
-      pointer-events: none;
-    }
-
-    .bubble {
-      div {
-        position: absolute;
-        top: 10px;
-        left: 25px;
-      }
-    }
-
-    .desc {
-      position: absolute;
-      bottom: 0;
-    }
+    height: 35dvh;
+    width: 100dvw;
   }
 }
 
 // 橫
 @media (orientation: landscape) {
   .hp-container {
-    position: relative;
     width: 75%;
-
-    .hp-img {
-      position: absolute;
-      z-index: 2;
-    }
   }
 
   .main {
-    position: relative;
-    height: 50dvh;
-    width: 80%;
-
-    .crocodile {
-      position: absolute;
-      top: 100%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 15%;
-    }
-
-    .bubble1{
-      position: absolute;
-      top: 28%;
-      right: 0;
-      width: 40%;
-    }
-
-    .bubble2 {
-      position: absolute;
-      bottom: -50%;
-      right: 0;
-      width: 40%;
-    }
-
-    .bubble3 {
-      position: absolute;
-      top: 28%;
-      left: 0;
-      width: 40%;
-    }
-
-    .bubble4 {
-      position: absolute;
-      bottom: -50%;
-      left: 0;
-      width: 40%;
-    }
-
-    .fixed {
-      pointer-events: none;
-    }
-
-    .bubble {
-      div {
-        position: absolute;
-        top: 25px;
-        left: 35px;
-      }
-    }
-  }
-
-  .desc {
-    position: absolute;
-    bottom: -100%;
+    height: 100dvh;
+    width: 80dvw;
   }
 }
 
