try meerkat-game proto

--- a/src/app/hedgehog-game/hedgehog-game.component.html
+++ b/src/app/hedgehog-game/hedgehog-game.component.html
@@ -14,7 +14,7 @@
         <img src="{{ items[currentItem].desc }}">
       </div>
       <div id="hedgehog-container" class="hedgehog-container">
-        <img [src]="stageImgMap[currentStage].img" class="hedgehog-image" alt="Rabbit">
+        <img [src]="stageImgMap[currentStage].img" class="hedgehog-image" alt="hedgehog">
       </div>
       <ng-container *ngFor="let item of items; let i=index;" >
         <div class="item"
