--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,27 +1,27 @@
 <h3 class="m-3">Outsiders games</h3>
 <div class="items">
   <!-- chat game -->
-  <img src="/assets/images/home/crocodile.gif"
+  <img src="/assets/images/home/crocodile.png"
       class="rounded float-left img-fluid"
       routerLink="/crocodile">
 
-  <img src="/assets/images/home/cow.gif"
+  <img src="/assets/images/home/cow.png"
       class="rounded float-right img-fluid"
       routerLink="/cow">
 
-  <img src="/assets/images/home/rabbit.gif"
+  <img src="/assets/images/home/rabbit.png"
       class="rounded float-left img-fluid"
       routerLink="/rabbit">
 
-  <img src="/assets/images/home/hedgehog.gif"
+  <img src="/assets/images/home/hedgehog.png"
       class="rounded float-right img-fluid"
       routerLink="/hedgehog">
 
-  <img src="/assets/images/home/meerkat.gif"
+  <img src="/assets/images/home/meerkat.png"
       class="rounded float-left img-fluid"
       routerLink="/meerkat">
 
-  <img src="/assets/images/home/sloth.gif"
+  <img src="/assets/images/home/sloth.png"
       class="rounded float-right img-fluid"
       routerLink="/sloth">
 </div>
