--- a/src/app/cow-game/cow-game.component.html
+++ b/src/app/cow-game/cow-game.component.html
@@ -1,7 +1,7 @@
-<div class="container" #container>
+<div class="game-container" #container>
   <!-- show description image if not in gaming stage  -->
   <div *ngIf="currentStage != pageStages.gaming" (click)="changeStage()" class="stage-desc">
-    <img [src]="stageImgMap[currentStage].img" class="cow-image" alt="Cow">
+    <img [src]="stageImgMap[currentStage].img" class="desc-image" alt="Cow">
   </div>
 
   <div *ngIf="currentStage == pageStages.gaming" (click)="toggleNeedleAnimation()">
