--- a/src/app/meerkat-game/meerkat-game.component.scss
+++ b/src/app/meerkat-game/meerkat-game.component.scss
@@ -16,16 +16,23 @@
   justify-content: center;
 }
 
-
-.meerkat-image {
-  width: 100%;
-  object-fit: cover;
-}
-
-img {
+.material-image {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.meerkat-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.desc-image {
+  position: absolute;
+  width: 60%;
+  left: 20%;
+  top: 5px;
 }
 
 .main {
@@ -34,31 +41,31 @@ img {
   .item1{
     bottom: 0;
     left: 0%;
-    width: 10%;
+    width: 8%;
   }
 
   .item2 {
     bottom: 0;
     left: 10%;
-    width: 20%;
+    width: 17%;
   }
 
   .item3 {
     bottom: 0;
     left: 20%;
-    width: 9%;
+    width: 8%;
   }
 
   .item4 {
     bottom: 0;
     left: 30%;
-    width: 15%;
+    width: 13%;
   }
 
   .item5 {
     bottom: 3%;
     left: 45%;
-    width: 8%;
+    width: 7%;
   }
 
   .item {
@@ -66,24 +73,24 @@ img {
   }
 
   .pos0{
-    top: 16%;
+    top: 10%;
     left: 4%;
     width: 15%;
     height: 35%;
   }
 
   .pos1 {
-    top: 42%;
+    top: 50%;
     left: 2%;
     width: 25%;
     height: 42%;
   }
 
   .pos2 {
-    top: 22%;
+    top: 25%;
     left: 17%;
     width: 12%;
-    height: 32%;
+    height: 38%;
   }
 
   .pos3 {
@@ -100,6 +107,7 @@ img {
     height: 25%;
   }
 }
+
 
 // 直
 @media (orientation: portrait) {
